[package]
name = "psi-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
curve25519-dalek.workspace = true
sha2.workspace = true
rand.workspace = true
thiserror.workspace = true

[dev-dependencies]
# For examples and tests only
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
